<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_app">

        <Preference
            app:key="pref_profile_photo"
            app:title="@string/settings_profile_photo_title"
            app:summary="@string/settings_profile_photo_summary" />

        <EditTextPreference
            app:key="pref_user_display_name"
            app:title="@string/settings_user_name_title"
            app:dialogTitle="@string/settings_user_name_dialog_title"
            app:useSimpleSummaryProvider="false" />

        <ListPreference
            app:key="pref_theme"
            app:title="@string/settings_theme_title"
            app:defaultValue="system"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="pref_language"
            app:title="@string/settings_language_title"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_account">

        <Preference
            app:key="pref_google_play_account"
            app:title="@string/settings_google_play_title"
            app:summary="@string/settings_google_play_not_connected" />

        <Preference
            app:key="pref_google_play_connect"
            app:title="@string/settings_google_play_connect_title"
            app:summary="@string/settings_google_play_connect_summary" />

        <Preference
            app:key="pref_google_play_logout"
            app:title="@string/settings_google_play_logout_title"
            app:summary="@string/settings_google_play_logout_summary" />

        <Preference
            app:key="pref_reset_game_data"
            app:title="@string/settings_reset_game_data_title"
            app:summary="@string/settings_reset_game_data_summary" />

    </PreferenceCategory>

</PreferenceScreen>
